apps/gitea/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitea-http
  namespace: gitea
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`gitea.lan`) || Host(`gitea.proompteng.ai`) || Host(`gitea.grisha.cloud`)
      services:
        - name: gitea-http
          port: 3000
  tls:
    secretName: gitea-tls
